--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo1
 spring.mvc.hiddenmethod.filter.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/springDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/sprDB
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.hikari.maximum-pool-size=10
